fixed overflow hidden on big home screens avoiding shitty ui on high display

--- a/src/App.scss
+++ b/src/App.scss
@@ -1800,6 +1800,7 @@ div.me-intro-wrap, div.me-origins-wrap{
 }
 
 .rotating-home-text{
+  margin-bottom: 30px;
   font-weight: 900;
   font-size: calc(1em + .75vw);
 }
